--- a/fabric/package.json
+++ b/fabric/package.json
@@ -4,8 +4,8 @@
   },
   "name": "ionray-network",
   "version": "1.0.0",
-  "description": "ionray",
-  "networkImage": "https://github.com/trick77/ionray/blob/master/fabric/networkimage.svg",
+  "description": "ionray Business Netzwerk",
+  "networkImage": "https://raw.githubusercontent.com/trick77/ionray/master/fabric/networkimage.svg",
   "scripts": {
     "prepublish": "mkdirp ./dist && composer archive create --sourceType dir --sourceName . -a ./dist/ionray.bna",
     "pretest": "npm run lint",
