--- a/fabric/package.json
+++ b/fabric/package.json
@@ -5,8 +5,8 @@
   "name": "ionray-network",
   "version": "1.0.0",
   "description": "ionray Business Netzwerk",
-  "networkImage": "https://raw.githubusercontent.com/trick77/ionray/master/fabric/networkimage.svg",
-  "networkImageanimated": "https://raw.githubusercontent.com/trick77/ionray/master/fabric/networkimage.svg",
+  "networkImage": "https://cdn.rawgit.com/trick77/ionray/master/fabric/networkimage.svg",
+  "networkImageanimated": "https://cdn.rawgit.com/trick77/ionray/master/fabric/networkimage.svg",
   "scripts": {
     "prepublish": "mkdirp ./dist && composer archive create --sourceType dir --sourceName . -a ./dist/ionray.bna",
     "pretest": "npm run lint",
