--- a/app/package.json
+++ b/app/package.json
@@ -31,12 +31,14 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^3.3.7",
     "cfenv": "^1.0.4",
     "concurrently": "^3.1.0",
     "config": "^1.21.0",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
+    "font-awesome": "^4.7.0",
     "http-proxy-middleware": "^0.18.0",
     "jquery": "^3.2.1",
     "rxjs": "^5.1.0",
